Comments on adequacy of AG04

--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -52,7 +52,11 @@ Where $k=|C_{q_1}|=|C_{q_2}|.$
 
 \subsubsection{Obfuscating Clifford Using the Canonical Form}
 \label{sec:Clifford-iO-canonical}
-Aaronson and Gottesman invented a polynomial-time algorithm that computed a canonical form of any Clifford circuit~\cite{AG04}. Their algorithm (we denote as {\tt AG-Canonical}, page 8 - 9 \cite{AG04})\anote{pages 8-9 of the AG reference?}takes a tableau (binary matrix) related to a Clifford circuit as an input and output its canonical form.  However, the {\tt AG-Canonical} lacks two properties that our important for obtaining $Qi\mathcal{O}.$ First, it does not take a circuit as an input, but rather a $2n \times 2n$ binary matrix representing some quantum state and second, the canonical form computed by it may not always be unique. In this section we show that how one can easily tweak {\tt AG-Canonical}, so that it satisfies both of the properties and allow us to construct a  $Qi\mathcal{O}$ for all Clifford Circuits. We start by briefly describing  {\tt AG-Canonical}.
+
+\anote{This entire section is very cryptic. We need to have a good intuitive understanding of why their canonical form works, and then explain this to the reader. Currently, it seems like magic. I'm also unsure about this part taking up so much space- with essentially zero contribution from us, but I don't have an alternative. I am thinking about it.}
+\anote{For instance, is there a relationship between the $f$ update functions in the preliminaries, and the update functions here for the Cliffords?}
+
+Aaronson and Gottesman invented a polynomial-time algorithm that computed a canonical form of any Clifford circuit~\cite{AG04}. Their algorithm (we denote as {\tt AG-Canonical}, page 8 - 9 \cite{AG04})\anote{pages 8-9 of the AG reference? I think it is more standard to cite the Section numbers, and make sure you check the published version, not the arXiv version.}takes a tableau (binary matrix) related to a Clifford circuit as an input and output its canonical form.  However, the {\tt AG-Canonical} lacks two properties that our important for obtaining $Qi\mathcal{O}.$ First, it does not take a circuit as an input, but rather a $2n \times 2n$ binary matrix representing some quantum state and second, the canonical form computed by it may not always be unique. In this section we show that how one can easily tweak {\tt AG-Canonical}, so that it satisfies both of the properties and allow us to construct a  $Qi\mathcal{O}$ for all Clifford Circuits. We start by briefly describing  {\tt AG-Canonical}.
 
 \anote{excellent lead-in paragraph above!}
 
@@ -131,7 +135,7 @@ C&D
 apply 11 rounds  $\hgate-\cnot-\pgate-\cnot-\pgate-\cnot-\hgate-\pgate-\cnot-\pgate-\cnot$ to the above block matrix to obtain standard initial tableau $[{\bf I}_{2n}|{\bf 0}].$ Let $(g_i)_{i=1}^k,\, k\in\mathbb{N}$ be the sequence of gates corresponding to these rounds. Then the canonical form of the circuit $C_q$ is given be the reverse of the sequence $(g_i)_{i=1}^k.$ Now suppose $C_q^\prime$  is another circuit that is equivalent to
 $C_q$ and $\mathcal{T}_i^\prime \neq \mathcal{T}_i$ be a initial tableau representing the state $\ket{0}^{\otimes n}.$ Let $\mathcal{T}_f^\prime$ be the final tableau representing the state $C_q^\prime(\ket{0}^{\otimes n}).$ Then it is possible that $\mathcal{T}_f\neq \mathcal{T}_f^\prime$ and in this case the sequence $(g_i^\prime )_{i=1}^{k^\prime} \leftarrow {\tt AG-Canonical}(\mathcal{T}_f^\prime)$ is different from $(g_i)_{i=1}^k,\, k\in\mathbb{N}.$ Therefore, in general the output of {\tt AG-Canonical}  can be different for two equivalent circuits.
 \anote{The above needs to be emphasized earlier on- the cannonical form of AG is not actually unique}
-
+\anote{I think there is another reason why this form is not unique. There are possibly many choices of the gates that would lead to the standard initial tableau (think: you can chose in what order you do CNOTs, if the qubits are disjoint, you can decide to do a P now, or later, depending on the intermediate configuration, etc. So, I don't think we have the full proof that this is a unique canonical form. \cite{AG04} only claim that you can put your stabilizer in the form of 11 rounds of $H-C-P-C-P-C-H-P-C-P-C$, they do not claim that the specific decomposition is unique. }
 %This can also be demonstrated by a counter example, Let $C_q= \igate \otimes  \igate$ and $C_q^\prime= (\igate \otimes  \hgate)\cdot (\igate \otimes  \hgate)$ are equivalent circuits.  Let $\mathcal{T}_i$ and $\mathcal{T}_i^\prime$ denote initial tableaus for the state $\ket{0}^{\otimes 2}.$
 %
 % Then it is possible that $\mathcal{T}_f\neq \mathcal{T}_f^\prime.$ Moreover, the algorithm  {\tt AG-Canonical} takes $\mathcal{T}_f$ as a input and compute a canonical form as follows: First apply $\cnot, \hgate$ and $\pgate$  to $\mathcal{T}_f$ in a sequence (denoted by $S_G$) to obtain standard initial tableau  $[{\bf I}_{2n}|{\bf 0}].$ Then the canonical form of $C_q$ is given by the sequence $S_G.$ This means, the output of {\tt AG-Canonical}  may be different for $C_q$ from $C_q^\prime$ if $\mathcal{T}_f\neq \mathcal{T}_f^\prime.$  For example, $C_q= \igate \otimes  \igate$ and $C_q^\prime= (\igate \otimes  \hgate)\cdot (\igate \otimes  \hgate)$ are equivalent circuits. Let Let $\mathcal{T}_i$ and $\mathcal{T}_i^\prime$ denote initial tableaus for the state $\ket{0}^{\otimes 2}.$
@@ -212,6 +216,9 @@ The {\tt AG-Canonical-Unique} computes a unique canonical form for Clifford Circ
 The cost of computing the final tableau $\mathcal{T}_f$ is at most $O(n)$ gates (\cite{AG04}) and $|C_q^\prime |\in O(poly(|n|)$ (\cite{AG04}).  Note, for any $n$-qubit circuit $n\leq |C_q|,$ therefore the size of the algorithm {\tt AG-Canonical-Unique} is at most $poly(|C_q|)$ gates. Moreover, Aaronson and Gottesman proved in \cite{AG04} that if $C_{q_1}$ and $C_{q_2}$ are two Clifford circuits and $\mathcal{T}_{f_1}$ and $\mathcal{T}_{f_2}$ are their final tableaus obtained by running them on the standard initial tableau
 $\mathcal{T}_{i_1}=\mathcal{T}_{i_2}=[{\bf I}_{2n}|{\bf 0}]$, then $C_{q_1}$ and $C_{q_2}$ are equivalent if and only if $\mathcal{T}_{f_1}=\mathcal{T}_{f_2}.$ This means the final tableau $\mathcal{T}_f$ obtain in {\tt AG-Canonical-Unique} is the same for every equivalent Clifford circuit. Therefore {\tt AG-Canonical-Unique} computes a unique canonical form for Clifford circuits.
 \end{proof}
+
+\anote{Regarding the above proof, as mentioned earlier, I am not convinced, because although we have idential tableaus $\mathcal{T}_{f_1}=\mathcal{T}_{f_2}$, the canonical form algorithm of \cite{AG04} does not necessarily give a unique decomposition into the 11 rounds of $H-C-P-C-P-C-H-P-C-P-C$.
+I think that, instead of trying to fix the AG04 method, it might be easier and safer to go with Seiliger's method (see the .pdf under the DropBox folder References/Selinger-notesAnne.pdf). I think he proves that what he calls the "normal form" is unique for Cliffords.  }
 
 \anote{should the following have a section number?}
 \noindent{\bf Quantum Indistinguishability Obfuscator from Canonical Form}:  On input a Clifford circuit $C_q,$ the $Qi\mathcal{O}$ first computes the canonical form  {\tt AG-Canonical-Unique}$(C_q)$ and then outputs an empty register $\rho$ along with {\tt AG-Canonical-Unique}$(C_q).$
