QiO definition fixed

--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -31,7 +31,7 @@ $$(\rho, C_q^\prime)\leftarrow Qi\mathcal{O}(C_q) \;  \mbox{ and }\; C_q^\prime(
 
 \item  {\tt Polynomial Slowdown:}  For every $C_{q}\in \mathcal{C}_Q,$
 \begin{itemize}
-\item  $\rho \in \mathit{Qubit}(poly(|C_{q}|)),$ \emph{i.e.}, $\rho$ is at most a $poly(|C_{q}|)$ qubit state.
+\item  $\rho$ is at most a $poly(|C_{q}|)$ qubit state.
 \item $|C_{q}^\prime| \in poly(|C_{q}|).$
 \end{itemize}
 \anote{in below, did we define what we mean by size? If this is the number of gates, I would find the definition quite restrictive. Maybe you mean the same dimensions for input- output?}
