--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -3,7 +3,7 @@
 %Section
 \section{Quantum Indistinguishability Obfuscation}
 \label{sec:QiO-Cliffords and more}
-
+ In this section we ...
 \anote{Need some blah blah at the beginning of a section to say what we present in this section.}
  %Here, we show how to achieve iO for some families of quantum circuits.
 %We give two alternative methods, the first based on canonical forms, and the second based on gate teleportation.
