--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -372,56 +372,189 @@ Here, we show how to build iO for quantum circuit families that satisfy Definiti
 \anote{Is this the correct link to the Definition?}
 
 \subsubsection{Using a Canonical Form}
-Main idea: Each Clifford layer is obfuscated using the canonical form. The $\tgate$ gate layers are given in the clear. The result is a canonical form, since the family is selected such that the description just given will be a canonical form.
+Main idea: Each Clifford layer is obfuscated using the canonical form. The $\tgate$-gate layers are given in the clear. The result is a canonical form, since the family is selected such that the description just given will be a canonical form.
 \anote{I think this one is less interesting because the $T$ gates are in the clear. Maybe drop it?}
 
 
 \subsubsection{Using Gate Teleportation}
-As mentioned in  Section~\ref{defn:Clifford+T:family}, adding a non-Clifford gates  such as $\tgate$ to Clifford gates gives us a generating set for all quantum circuits. The $\tgate$ relates to the $\xgate, \zgate$
+In this section we will first show that how we can obfuscate any 1-qubit unitary circuit using gate teleportation and and a quantum secure iO. Then using the ideas from 1-qubit we will show that how we can obfuscate any $n$-qubit circuit $C_q$ as far as the number of $\tgate$-gates remain logarithmic in $|C_q|.$ Recall from the section \ref{defn:Clifford+T:family} that adding a non-Clifford gates  such as $\tgate$-gate to Clifford gates gives us a generating set for all quantum circuits. The $\tgate$ relates to the $\xgate, \zgate$
 $$\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$$
-Note  $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate,$
-$$\tgate \xgate^b \zgate^a$$
-$$=\xgate^b \zgate^{a\oplus b}\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate\right]^b \tgate$$
-$$=\xgate^b \zgate^{a\oplus b}\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate^b\right] \tgate$$
-\anote{For the last line, I would add some explanation, otherwise it looks like a mistake}
-Now suppose we  want evaluate the circuit $\hgate \tgate$ on some qubit $\ket{\phi}$ using gate teleportation, then
- $$\hgate \tgate \xgate^b \zgate^a (\ket{\phi}) = \xgate^{b\oplus a} \zgate^b \hgate \pgate^b \tgate(\ket{\phi})$$
- If $b=0,$ then we don't have to worry about the $\pgate$ correction, otherwise we have to perform a $\pgate$ correction which is a problem since  $\hgate$ and $\pgate$ does not compute.\anote{commute?}
- $$\hgate \tgate \xgate^b \zgate^a (\ket{\phi}=\xgate^{a\oplus b} \zgate^b  \left[\left(\frac{1+i}{2}\right) \hgate + \left(\frac{1-i}{2}\right)\hgate\zgate^b\right] \tgate(\ket{\phi})$$
-$$= \xgate^{a\oplus b} \zgate^b  \left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\xgate^b\right] \hgate\tgate(\ket{\phi})$$
-$$=\left[\left(\frac{1+i}{2}\right)\xgate^{a\oplus b} \zgate^b  + (-1)^b\left(\frac{1-i}{2}\right)  \xgate^{a} \zgate^b\right]\hgate\tgate(\ket{\phi})$$
-$$=\left[\alpha_1\xgate^{a\oplus b} \zgate^b  + (-1)^b\alpha_2  \xgate^{a} \zgate^b\right]\hgate\tgate(\ket{\phi})$$
- where $\alpha_1=\left(\frac{1+i}{2}\right)$ and $\alpha_2=\left(\frac{1-i}{2}\right).$ For this particular circuit, the update function requires at most two complex numbers and four bits.
- In general for any 1-qubit  unitary circuit we need to store at most four complex numbers and eights bits to represent the corresponding update function. To realize this, note that the set $\{\hgate,  \tgate\}$ is universal for 1-qubit unitary and any 1-qubit (unitary circuit) can be written as an alternating sequence of $\hgate,$ and $\tgate$ as follows,
-\anote{I don't think the decomposition below is universal (see my email). Also, need to describe in preliminaries how to interpret this - from right-to-left or the other way?}
+If $b=0,$ then we don't have to worry about $\pgate$ gate otherwise we have to perform a $\pgate$ correction. We can write $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate,$ therefore
 
- $$C_q=\textsf{G}\mbox{ --- }\tgate \mbox{ --- } \hgate \mbox{ --- } \tgate \mbox{ --- } \hgate \mbox{ --- } \cdots \mbox{ --- } \tgate \mbox{ --- } \hgate \mbox{ --- } \tgate \mbox{ --- } \textsf{G}$$
-  where $\textsf{G}=\hgate$ or $\textsf{G}=\igate.$
+\begin{equation}
+\label{eq:pgate1}
+\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate\right]^b \tgate
+\end{equation}
+Note  $\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate\right]^b=\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate^b\right]$ for $b \in \{0,1\},$ therefore we can rewrite the equation \ref{eq:pgate1} as
+\begin{equation}
+\label{eq:pgate2}
+\begin{aligned}
+\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\left[\left(\frac{1+i}{2}\right) \igate + \left(\frac{1-i}{2}\right)\zgate^b\right] \tgate \\
+=\left[\left(\frac{1+i}{2}\right) \xgate^b \zgate^{a\oplus b} + \left(\frac{1-i}{2}\right)\xgate^b \zgate^a\right] \tgate \\
+\end{aligned}
+\end{equation}
 
-Lets compute this circuit gate by gate on some qubit $\ket{\phi}$ using gate teleportation
- \begin{enumerate}
-\item[1)] $\textsf{G} \xgate^{b}\zgate^{a}(\ket{\phi})=\xgate^{b_1}\zgate^{a_1}\textsf{G}(\ket{\phi}),$
-where $b_1=a,\, a_1=b,$ if $\textsf{G} =\hgate,$  otherwise   $b_1=b,\, a_1=a.$\\
-\item[2)] $\tgate\xgate^{b_1}\zgate^{a_1}\textsf{G}= (\alpha_1\xgate^{a_1\oplus b_1 }\zgate^{b_1} +(-1)^{b_1} \alpha_2\xgate^{a_1}\zgate^{b_1})\tgate \textsf{G}.$
-\item[3)]   $\hgate (\alpha_1\xgate^{a_1\oplus b_1 }\zgate^{b_1} + (-1)^{b_1} \alpha_2\alpha_2\xgate^{a_1}\zgate^{b_1})\tgate \textsf{G}=(\alpha_1\xgate^{b_1}\zgate^{a_1\oplus b_1 } + (-1)^{b_1} \alpha_2\xgate^{b_1}\zgate^{a_1}) \hgate \tgate \textsf{G}.$ \anote{typo: $\alpha_2\alpha_2$?}
-\item[4)] $\tgate(\alpha_1\xgate^{b_1}\zgate^{a_1\oplus b_1 } + \alpha_2\xgate^{b_1}\zgate^{a_1}) \hgate \tgate \textsf{G}=\left(\frac{i}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1 } +  \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{b_1}+
-   \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1}  - \frac{i}{2}\xgate^{a_1}\zgate^{b_1} \right) \tgate\hgate \tgate \textsf{G}.$
+Since $a$ and $b$ are bits , the equation \ref{eq:pgate2} can be written as a linear combination of $\{\igate, \xgate, \zgate, \xgate \zgate\},$
 
-\item[5)]$\hgate  \left(\frac{i}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1 } +  \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{b_1}+
-   \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1}  - \frac{i}{2}\xgate^{a_1}\zgate^{b_1} \right)\tgate\hgate \tgate \textsf{G}\\=  \left(\frac{i}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1} +  \frac{(-1)^{b_1}}{2}\xgate^{b_1}\zgate^{a_1\oplus b_1}+
-   \frac{(-1)^{b_1}}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1}  - \frac{i}{2}\xgate^{b_1}\zgate^{a_1} \right)\hgate \tgate\hgate \tgate \textsf{G}$
+\begin{equation}
+\label{eq:pgate3}
+\begin{aligned}
+\tgate \xgate^b \zgate^a= (\alpha_0 \igate +  \alpha_1 \xgate + \alpha_2 \zgate + \alpha_3 \xgate\zgate)\tgate \\
+\end{aligned}
+\end{equation}
+for   $\alpha_i \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\},$  $i\in[4].$ The equation \ref{eq:pgate3} is crucial as we will see that for any 1-qubit circuit the correction unitary has this form. 
 
-   $=\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G},$  for $c_i\in \mathbb{C}.$
-\item[6)]  $\tgate\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G}=\left(c_1\igate+ c_2\xgate \zgate\pgate+c_3\zgate +c_4\xgate\pgate\right)\tgate \xgate\zgate\hgate\tgate\hgate \tgate \textsf{G}$
 
- \hspace{2.3in}   $=\left(c_1\igate+ c_2^\prime\xgate+c_3\zgate+c_4^\prime\xgate\zgate\right)\tgate \xgate\zgate\hgate\tgate\hgate \tgate \textsf{G},$ \\
-  where $c_2^\prime=(c_2\alpha_2+c_4\alpha_1)$ and $c_4^\prime=(c_2\alpha_1+c_4\alpha_2).$
-  %$\tgate(\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G},\right)$
-\item[-] Note applying $\tgate$ gate in the line 6 only affected the coefficients but didn't increase the number of terms in the summation. It is easy to see that after applying the remain gates in $C_q$ we  have the quantity
-$$\left(\beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate\right) C_q(\ket{\phi}), \; \mbox{ where } \beta_i\in \mathbb{C}.$$
-\anote{because the Paulis form a basis?}
-\end{enumerate}
-Furthermore, the correction matrix $\left(\beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate\right)^{-1}$  is completely determine by $(\beta_1, \beta_2, \beta_3, \beta_4).$ Therefore, for any arbitrary 1-qubit unitary circuit $C_q,$ the update function is $$F_{C_q}: \mathbb{F}_2^2 \longrightarrow \mathbb{C}^4,\hspace{0.5cm} (a,b)\longrightarrow (\beta_1,\beta_2,\beta_3, \beta_4).$$
+Let $C_q$ be a $1$-qubit circuit we want to obfuscate and $\ket{\psi}$ is the quantum state on which we want to evaluate $C_q.$ Note we can write any $1$-qubit circuit as sequence of gates from the set $\{\hgate, \tgate\}$ \footnote{The set $\{\hgate,  \tgate\}$ is universal for 1-qubit unitary.}
+
+$$C_q=(g_{|C_q|},\ldots,g_2,g_1 ),\; g_i\in\{\hgate, \tgate\}$$
+In gate teleportation algorithm we  have an subsystem of the form $C_q \xgate^b\zgate^a (\ket{\psi})$ (section \ref{protocol: gate  teleportation} ) and to evaluate the circuit on the input we have to apply a correction unitary
+
+\begin{equation}
+\label{eq:pgate4}
+C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2,g_1 )\xgate^b\zgate^a (\ket{\psi}).
+\end{equation}
+If $g_1=\hgate$ then we can write the above system as 
+
+\begin{equation}
+\begin{aligned}
+\label{eq:pgate5}
+C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)  \xgate^a \zgate^b g_1 (\ket{\psi}) \\
+=(g_{|C_q|},\ldots,g_2)(e_0 \igate +  e_1 \xgate + e_2 \zgate + e_3\xgate \zgate)g_1 (\ket{\psi})
+\end{aligned}
+\end{equation}
+where  $e_i \in \{0,1\}$ for $i\in[4].$ Similarly if $g_1=\tgate,$ then we can also write the expression \ref{eq:pgate4} as 
+
+\begin{equation}
+\begin{aligned}
+\label{eq:pgate6}
+C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)(e_0^\prime \igate +  e_1^\prime \xgate + e_2^\prime \zgate + e_3^\prime \xgate \zgate)g_1 (\ket{\psi})
+\end{aligned}
+\end{equation}
+where $e_i^\prime \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\}$  for $i\in[4].$ Note there are more possibilities for $e_i^\prime$'s in the expression \ref{eq:pgate6} then $e_i$'s in the expression \ref{eq:pgate5}. This is because $\tgate$-gates can affect the size of the coefficients and whereas $\hgate$-gates can only permute the coefficients in the expression. After applying $g_2$ to expressions \ref{eq:pgate5} or \ref{eq:pgate6} the number of terms in the summation cannot exceed to more than 4. Moreover, the size of the coefficients $e_i$'s may only change if $g_2=\tgate,$ 
+
+\begin{equation}
+\begin{aligned}
+\label{eq:pgate7}
+C_q \xgate^b\zgate^a (\ket{\psi})=(g_{|C_q|},\ldots,g_2)  \xgate^a \zgate^b g_1 (\ket{\psi})\\
+=(g_{|C_q|},\ldots,g_2)(\gamma_0 \igate +  \gamma_1 \xgate + \gamma_2 \zgate + \gamma_3 \xgate \zgate)g_1 (\ket{\psi})
+\end{aligned}
+\end{equation}
+where $\gamma_i \in \mathbb{C}$ if $g_2=\tgate$ and $\gamma_i  \in\left\{0,1, \frac{1+i}{2}, \frac{1-i}{2}\right\}$ for $i\in[4].$
+
+Hence, it follows from the above that by applying the remaining  sequence of gates $(g_{|C_q|},\ldots,g_3)$, the expression \ref{eq:pgate7} can be written as 
+\begin{equation}
+\begin{aligned}
+\label{eq:pgate8}
+C_q \xgate^b\zgate^a (\ket{\psi})=(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \zgate + \beta_3\xgate \zgate)(g_{|C_q|},\ldots,g_2,g_1 )(\ket{\psi}) 
+\end{aligned}
+\end{equation}
+where $\beta_i  \in \mathbb{C}$ for $i\in[4].$  Therefore, for any  $1$-qubit circuit $C_q,$  the correction unitary can be written as  
+
+\begin{equation}
+\label{eq:pgate9}
+ (\beta_0 \igate +   \beta_1 \xgate +  \beta_2 \zgate +  \beta_3 \xgate\zgate), \mbox{ for }  \beta_i \in \mathbb{C},\; i\in[n]
+\end{equation}
+
+Moreover, it can be shown that the size of $\beta_i$'s grows at most a polynomial in the number of $\tgate$-gates in the circuit. Therefore the update function for the circuit $C_q$ can be define as a following map,
+
+\begin{equation*}
+F_{C_q}:\{0,1\}^2\rightarrow \mathbb{C}^4,\; (a,b)\mapsto (\beta_0, \beta_1,\beta_2,\beta_3)
+\end{equation*}
+which corresponds to the correction unitary $(\beta_0 \igate +  \beta_1 \xgate + \beta_2 \zgate + \beta_3\xgate \zgate).$
+Moreover, the update functions are for the any two equivalent 1-qubit circuit are equivalent (see Lemma \ref{lemma:1qubit}. Hence, we obfuscate any 1-qubit circuit using gate teleportation and a quantum secure iO as we did for the Clifford circuits. 
+
+
+
+\begin{lemma}
+\label{lemma:1qubit}
+Let $C_q$ and $C_q^\prime$ be two equivalent 1-qubit circuits and 
+\begin{equation*}
+F_{C_q}:\{0,1\}^2\rightarrow \mathbb{C}^4 \mbox{ and } F_{C_q^\prime}:\{0,1\}^2\rightarrow \mathbb{C}^4
+\end{equation*}
+are the corresponding update functions, then $F_{C_q}=F_{C_q^\prime}.$
+%Let $C_q$ and $C_q^\prime$ be two 1-qubit equivalent circuits and $\beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate$ and $\beta^\prime_1 \igate+\beta^\prime_2 \xgate+\beta^\prime_3 \zgate+\beta^\prime_4 \xgate \zgate$ are the corresponding correction unitary matrices, then $\beta_i=\beta_i^\prime$  for all integers $1\leq i\leq 4.$
+\end{lemma}
+
+{\bf Proof:} Let  $F_{C_q}(a,b)=(\beta_0, \beta_1, \beta_2, \beta_3)$ and $F_{C_q^\prime}(a,b)=(\beta_0^\prime, \beta_1^\prime, \beta_2^\prime, \beta_3^\prime)$ for $a,b\in\{0,1\}.$ For any qubit $(\ket{\psi}$
+\begin{equation}
+\label{lemma:1qubit:eq1}
+\begin{aligned}
+ C_q \xgate^b \zgate^a(\ket{\psi})=(\beta_0 \igate+\beta_1 \xgate+\beta_2 \zgate+\beta_3 \xgate \zgate)  C_q (\ket{\psi}).\\
+ \end{aligned}
+\end{equation}
+
+\begin{equation}
+\label{lemma:1qubit:eq2}
+\begin{aligned}
+ C_q^\prime \xgate^b \zgate^a(\ket{\psi})=(\beta_0^\prime \igate+\beta_1^\prime \xgate+\beta_2^\prime \zgate+\beta_3^\prime \xgate \zgate)  C_q^\prime (\ket{\psi}).
+ \end{aligned}
+\end{equation}
+
+Since,  $C_q (\rho)=C_q^\prime (\rho)$ for every input $\rho$ we can must have $C_q \xgate^b \zgate^a(\ket{\psi})= C_q^\prime \xgate^b \zgate^a(\ket{\psi}).$ Therefore we have 
+\begin{equation}
+\label{lemma:1qubit:eq3}
+\begin{aligned}
+(\beta_0 \igate+\beta_1 \xgate+\beta_2 \zgate+\beta_3 \xgate \zgate)  C_q (\ket{\psi})=(\beta_0^\prime \igate+\beta_1^\prime \xgate+\beta_2^\prime \zgate+\beta_3^\prime \xgate \zgate)  C_q^\prime (\ket{\psi})\\
+(\beta_0 \igate+\beta_1 \xgate+\beta_2 \zgate+\beta_3 \xgate \zgate)  C_q (\ket{\psi})=(\beta_0^\prime \igate+\beta_1^\prime \xgate+\beta_2^\prime \zgate+\beta_3^\prime \xgate \zgate)  C_q(\ket{\psi})\\
+\end{aligned}
+\end{equation}
+
+
+From equation \ref{lemma:1qubit:eq3} we must have
+\begin{equation}
+\label{lemma:1qubit:eq4}
+(\beta_0-\beta_0^\prime) \igate+(\beta_1 -\beta_1^\prime)\xgate+(\beta_2-\beta_2^\prime) \zgate+(\beta_3-\beta^\prime_3) \xgate \zgate={\bf 0}.
+\end{equation}
+
+If $\beta_i \neq \beta_i^\prime$ for some $i\in[4],$ then the expression on the L.H.S cannot be equal to the zero matrix, therefore we must have $\beta_i = \beta_i^\prime$ for every $i\in[4].$ Hence,  $F_{C_q}=F_{C_q^\prime}.$
+%\begin{equation}
+%\label{eq:qubit1}
+% \beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate C_q (\ket{\psi})=\beta^\prime_1 \igate+\beta^\prime_2 \xgate+\beta^\prime_3 \zgate+\beta^\prime_4 \xgate \zgate  C_q^\prime (\ket{\psi}).
+% \end{equation}
+% since $C_q (\ket{\psi})=C_q^\prime (\ket{\psi})$ we can substitute $C_q^\prime (\ket{\psi})$ in equation \ref{eq:qubit1} with $C_q (\ket{\psi}).$
+%
+% 
+% \begin{equation}
+% \label{eq:qubit2}
+% \beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate (C_q (\ket{\psi}))=\beta^\prime_1 \igate+\beta^\prime_2 \xgate+\beta^\prime_3 \zgate+\beta^\prime_4 (C_q (\ket{\psi})).
+%  \end{equation}
+%  
+%  From  equation \ref{eq:qubit2} we have 
+% \begin{equation}
+% \begin{aligned}
+% \label{eq:qubit2}
+%\beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate =\beta^\prime_1 \igate+\beta^\prime_2 \xgate+\beta^\prime_3 \zgate+\beta^\prime_4\\
+%  =(\beta_1-\beta_1^\prime) \igate+(\beta_2 -\beta_2^\prime)\xgate+(\beta_3-\beta_3^\prime) \zgate+(\beta_4-\beta^\prime_4) \xgate \zgate={\bf 0}.
+%  \end{aligned}
+% \end{equation}
+%  
+%If for any $i,$ $\beta_i \neq \beta_i^\prime$ then the expression on the L.H.S cannot be equal to the zero matrix, therefore we must have $\beta_i =\beta_i^\prime$ for all integers $1\leq i\leq 4.$
+
+%Lets compute this circuit gate by gate on some qubit $\ket{\phi}$ using gate teleportation
+% \begin{enumerate}
+%\item[1)] $\textsf{G} \xgate^{b}\zgate^{a}(\ket{\phi})=\xgate^{b_1}\zgate^{a_1}\textsf{G}(\ket{\phi}),$
+%where $b_1=a,\, a_1=b,$ if $\textsf{G} =\hgate,$  otherwise   $b_1=b,\, a_1=a.$\\
+%\item[2)] $\tgate\xgate^{b_1}\zgate^{a_1}\textsf{G}= (\alpha_1\xgate^{a_1\oplus b_1 }\zgate^{b_1} +(-1)^{b_1} \alpha_2\xgate^{a_1}\zgate^{b_1})\tgate \textsf{G}.$
+%\item[3)]   $\hgate (\alpha_1\xgate^{a_1\oplus b_1 }\zgate^{b_1} + (-1)^{b_1} \alpha_2\alpha_2\xgate^{a_1}\zgate^{b_1})\tgate \textsf{G}=(\alpha_1\xgate^{b_1}\zgate^{a_1\oplus b_1 } + (-1)^{b_1} \alpha_2\xgate^{b_1}\zgate^{a_1}) \hgate \tgate \textsf{G}.$
+%\item[4)] $\tgate(\alpha_1\xgate^{b_1}\zgate^{a_1\oplus b_1 } + \alpha_2\xgate^{b_1}\zgate^{a_1}) \hgate \tgate \textsf{G}$\\
+%               $=\left(\frac{i}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1 } +  \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{b_1}+
+%   \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1}  - \frac{i}{2}\xgate^{a_1}\zgate^{b_1} \right) \tgate\hgate \tgate \textsf{G}.$
+%
+%\item[5)]$\hgate  \left(\frac{i}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1 } +  \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{b_1}+
+%   \frac{(-1)^{b_1}}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1}  - \frac{i}{2}\xgate^{a_1}\zgate^{b_1} \right)\tgate\hgate \tgate \textsf{G}\\=  \left(\frac{i}{2}\xgate^{a_1\oplus b_1}\zgate^{a_1} +  \frac{(-1)^{b_1}}{2}\xgate^{b_1}\zgate^{a_1\oplus b_1}+
+%   \frac{(-1)^{b_1}}{2}\xgate^{a_1}\zgate^{a_1\oplus b_1}  - \frac{i}{2}\xgate^{b_1}\zgate^{a_1} \right)\hgate \tgate\hgate \tgate \textsf{G}$
+%
+%   $=\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G},$  for $c_i\in \mathbb{C}.$
+%\item[6)]  $\tgate\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G}=\left(c_1\igate+ c_2\xgate \zgate\pgate+c_3\zgate +c_4\xgate\pgate\right)\tgate \xgate\zgate\hgate\tgate\hgate \tgate \textsf{G}$
+%
+% \hspace{2.3in}   $=\left(c_1^\prime\igate+ c_2^\prime\xgate+c_3^\prime\zgate+c_4^\prime\xgate\zgate\right)\tgate \xgate\zgate\hgate\tgate\hgate \tgate \textsf{G},$ \\
+%  where $c_1^\prime=c_1,$  $c_2^\prime=(c_2\alpha_2+c_4\alpha_1),$ $c_3^\prime=c_3,$ and $c_4^\prime=(c_2\alpha_1+c_4\alpha_2).$
+%  %$\tgate(\left(c_1\igate+ c_2\xgate+c_3\zgate+c_4\xgate\zgate\right)\hgate\tgate\hgate \tgate \textsf{G},\right)$
+%\item[-] Note applying any number gates after step 6 cannot increase the number of terms in the sum, but can only change the coefficients $c_i^\prime.$ In general, for any $1$-qubit  circuit the correction unitary is of form
+%$$\left(\beta_1 \igate+\beta_2 \xgate+\beta_3 \zgate+\beta_4 \xgate \zgate\right), \; \mbox{ where } \beta_i\in \mathbb{C}.$$
+%\end{enumerate}
+%Therefore, for any arbitrary 1-qubit unitary circuit $C_q,$ the update function is $$F_{C_q}: \mathbb{F}_2^2 \longrightarrow \mathbb{C}^4,\hspace{0.5cm} (a,b)\longrightarrow (\beta_1,\beta_2,\beta_3, \beta_4).$$
 
 % $$F_{C_q}: \mathbb{F}_2^2 \longrightarrow \mathbb{C}^4 \times  \mathbb{F}_2^8,\hspace{0.5cm} (a,b)\longrightarrow ((\alpha_1,\alpha_2,\alpha_3, \alpha_4), (a_1,b_1,a_2,b_2,a_3,b_3,a_4,b_4)).$$
 % and corresponds to the correction unitary $\sum_{i=1}^{4} \alpha_i\xgate^{b_i}\zgate^{a_i}.$
@@ -429,57 +562,48 @@ Furthermore, the correction matrix $\left(\beta_1 \igate+\beta_2 \xgate+\beta_3 
 %
 % $$\textsf{G}\mbox{ --- }\tgate \mbox{ --- } \hgate \mbox{ --- } \tgate \mbox{ --- } \hgate \mbox{ --- } \cdots \mbox{ --- } \tgate \mbox{ --- } \hgate \mbox{ --- } \tgate \mbox{ --- } \textsf{G}$$
 %
-% Moreover, the number terms in the summation $\sum_{i=1}^{4} c_i(\xgate^{a_i\oplus b_i }\zgate^{b_i} + \xgate^{a_i}\zgate^{b_i}),$ remain at most 4 when acted upon by $\tgate$ gate
+% Moreover, the number terms in the summation $\sum_{i=1}^{4} c_i(\xgate^{a_i\oplus b_i }\zgate^{b_i} + \xgate^{a_i}\zgate^{b_i}),$ remain at most 4 when acted upon by $\tgate$-gate
 
 
-How big  are the $\beta_i's $? Note each $\beta_i's$ are generated by multiplying and adding elements from the set $\{\left(\frac{1+i}{2}\right), \left(\frac{1-i}{2}\right)\}.$ Moreover, $\left(\frac{1\pm i}{2}\right)^k=\pm \frac{i}{2}$ and
-$\left(\frac{1+ i}{2}\right)\left(\frac{1- i}{2}\right)=\frac{1}{2}$ and only $\tgate$ can have impact on the size of the coefficients in the summation. Therefore, the size of complex numbers grows polynomially in the number of $\tgate$ gates.
-So we obfuscate any 1-qubit unitary circuit using gate teleportation protocol. \anote{no, mistake in the math above (see my email).}
-
-\anote{For above, I don't think necessarily that the size of the $\beta$'s is a determining factor, but more the number of such $\beta$'s. Presumably, the $\tgate$ and $\cnot$ play together is a way that makes the number of different $\beta$s increase-- this is what we need to figure out.}
-
-\anote{Did we define in preliminaries what the notation $\cnot_{2,1}$ means? Also, if we end up keeping this example, a picture of the circuit would be good}
-\anote{For step 1, to which qubit is the $\tgate$ applied? I would have guessed the first, but looking at the update, I am not sure, it looks like it is applied to the second}
-
-What about $n$-qubit circuits for $n>1$? As we will see that if a circuit has $k$ number of $\tgate$ gates, then in the worst-case the number of complex numbers required to specify grows super-polynomial in $k.$ The problem arises when $\cnot$ and $\tgate$ gates are mixed. To explain this let's consider the following 2-qubit circuit.
-$$\cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate)$$
-Let compute this circuit gate by gate using gate-teleportation
-
- \begin{enumerate}
-\item[1)]  $\tgate\otimes \igate \left[\xgate^{b_1}\zgate^{a_1}\otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime}\right]=\left[\alpha_1 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime})\right]\tgate\otimes \igate.$
-\item[2)] $\cnot_{1,2}\left[\alpha_1 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime}\right] (\tgate\otimes \igate)$
-
-$\hspace{3.9cm}=\left[(\alpha_1 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right]\cnot_{1,2}(\tgate\otimes \igate)$\\
-where $a_2=a_1 \oplus a_1^\prime \oplus b_1^\prime,\, b_2=b_1 \oplus b_1^\prime$  and  $a_2^\prime=a_1 \oplus a_1^\prime,\, b_2^\prime=b_1 \oplus b_1^\prime.$
-\item[3)] $\igate\otimes \tgate \left[\alpha_1 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime}\right]\cnot_{1,2}(\tgate\otimes \igate).$
-
-$=\left[(\alpha_1^2 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+(\alpha_1\alpha_2 \xgate^{b_1}\zgate^{a_2\oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+ (\alpha_1\alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right.$
-
-$+ \left.(\alpha_2^2 \xgate^{b_1}\zgate^{a_2^\prime \oplus b_1} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right] (\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate).$
-\item[4)] Applying $\cnot_{2,1}$ to the above system.
-
-$\left[(\alpha_1^2 \xgate^{b_1\oplus b_2}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+(\alpha_1\alpha_2 \xgate^{b_1\oplus b_2}\zgate^{a_2\oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+ (\alpha_1\alpha_2 \xgate^{b_1^\prime}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1})+\right.$
-
-$\left.(\alpha_2^2 \xgate^{b_1^\prime}\zgate^{a_2^\prime \oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1})\right] \cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate).$
-$$=\left(\sum_{i=1}^{4} \beta_i \xgate^{e_i}\zgate^{d_i}\otimes \xgate^{e_i^\prime}\zgate^{d_i^\prime}\right)\cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate);\; \beta_i\in \mathbb{C}, e_i,d_i,e_i^\prime,d_i^\prime \in\{0,1\}$$
-\end{enumerate}
-
-We observe the following 2 things from the above example:
-\begin{enumerate}
-\item[1)] We need 4 complex  numbers and 16 bits to represent the correction matrix.
-\anote{For the above, I suspect we will be able to say that the $\beta$'s appear in a fixed pattern, e.g. variations on $e^{i\pi/4}$, so the ``only'' thing we will need to obfuscate is the exponents of the Paulis. For instance, we give a program that tells us if a fixed $\beta$ appears (yes/no), and next, if it appears, the program gives us the exponents for the Paulis (and also a sign). Thus, we'll have a bunch of such functions, and this is what we need to obfuscate using classical iO.}
-\item[2)] $\cnot$ gates when combine with $\tgate$ gates increases the number of terms in the expression.
-\end{enumerate}
-
-For any 2-qubit quantum circuit  $C_q$ that has $k$ number of $\tgate$ gates, the correction unitary in the worst-case has $2^k$ terms;
-         $$\sum_{i=1}^{2^k} \left(\beta_i \xgate^{e_i}\zgate^{d_i}\otimes \xgate^{e_i^\prime}\zgate^{d_i^\prime}\right),\; \mbox{ for } \beta_i\in \mathbb{C},\, e_i,d_i,e_i^\prime,d_i^\prime \in\{0,1\}.$$
-This means we need $2^k$ complex numbers and $2^k\cdot 4$ bits to represent the correction unitary and the update function $f_{C_q}:\mathbb{C}^{2^k}\times \{0,1\}^{2^{k+2}}.$ Therefore, we can obfuscate any 2-qubit quantum circuit $C_q$ using gate-teleportation as far as  the number of $\tgate$  gates are at most $O(\log(|C_q|).$
-
-\anote{These statements (above and below) need to be justified. It looks to me like they would be amenable to a proof by induction.  }
-
-In, general, for any $n$-qubit circuit $C_q,$  the correction unitary can be written as $$\sum_{j=1}^{2^k} \left(\beta_j \xgate^{e_{1j}}\zgate^{d_{1j}}\otimes \xgate^{e_{2j}}\zgate^{d_{2j}}\otimes \cdots  \otimes  \xgate^{e_{2n}}\zgate^{d_{2n}}\right),$$
-where $\beta_i\in \mathbb{C}$ and  $ e_i,j,d_i,j \in \{0,1\}.$  This means we need $2^k$ complex numbers and $2^k\cdot n$ bits to represent the correction unitary and the update function $f_{C_q}:\{0,1\}^n\longrightarrow \mathbb{C}^{2^k}\times \{0,1\}^{n2^{k}}.$
-%$$\cnot_{2,1}\cnot_{1,2}(\tgate \otimes \tgate)((\xgate^{b_1} \zgate^{a_1})_1\otimes (\xgate^{b_2} \zgate^{a_2})_2)$$
+%How big  are the $\beta_i's $? Note each $\beta_i's$ are generated by multiplying and adding elements from the set $\{\left(\frac{1+i}{2}\right), \left(\frac{1-i}{2}\right)\}$ and only $\tgate$ can have impact on the size of the coefficients in the summation. Therefore, the size of complex numbers grows polynomially in the number of $\tgate$-gates.
+%
+%
+%What about $n$-qubit circuits for $n>1$? As we will see that if a circuit has $k$ number of $\tgate$-gates, then in the worst-case the number of complex numbers required to specify grows super-polynomial in $k.$ The problem arises when $\cnot$ and $\tgate$-gates are mixed. To explain this let's consider the following 2-qubit circuit.
+%$$\cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate)$$
+%Let compute this circuit gate by gate using gate-teleportation
+%
+% \begin{enumerate}
+%\item[1)]  $\tgate\otimes \igate \left[\xgate^{b_1}\zgate^{a_1}\otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime}\right]=\left[\alpha_1 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime})\right]\tgate\otimes \igate.$
+%\item[2)] $\cnot_{1,2}\left[\alpha_1 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_1} \otimes \xgate^{b_1^\prime}\zgate^{a_1^\prime}\right] (\tgate\otimes \igate)$
+%
+%$\hspace{3.9cm}=\left[(\alpha_1 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right]\cnot_{1,2}(\tgate\otimes \igate)$\\
+%where $a_2=a_1 \oplus a_1^\prime \oplus b_1^\prime,\, b_2=b_1 \oplus b_1^\prime$  and  $a_2^\prime=a_1 \oplus a_1^\prime,\, b_2^\prime=b_1 \oplus b_1^\prime.$
+%\item[3)] $\igate\otimes \tgate \left[\alpha_1 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime} + \alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime}\right]\cnot_{1,2}(\tgate\otimes \igate).$
+%
+%$=\left[(\alpha_1^2 \xgate^{b_1}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+(\alpha_1\alpha_2 \xgate^{b_1}\zgate^{a_2\oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+ (\alpha_1\alpha_2 \xgate^{b_1}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right.$
+%
+%$+ \left.(\alpha_2^2 \xgate^{b_1}\zgate^{a_2^\prime \oplus b_1} \otimes \xgate^{b_2^\prime}\zgate^{a_1^\prime})\right] (\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate).$
+%\item[4)] Applying $\cnot_{2,1}$ to the above system.
+%
+%$\left[(\alpha_1^2 \xgate^{b_1\oplus b_2}\zgate^{a_2} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+(\alpha_1\alpha_2 \xgate^{b_1\oplus b_2}\zgate^{a_2\oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1^\prime \oplus b_1^\prime})+ (\alpha_1\alpha_2 \xgate^{b_1^\prime}\zgate^{a_2^\prime} \otimes \xgate^{b_2^\prime}\zgate^{a_1})+\right.$
+%
+%$\left.(\alpha_2^2 \xgate^{b_1^\prime}\zgate^{a_2^\prime \oplus b_1} \otimes \xgate^{b_2}\zgate^{a_1})\right] \cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate).$
+%$$=\left(\sum_{i=1}^{4} \beta_i \xgate^{e_i}\zgate^{d_i}\otimes \xgate^{e_i^\prime}\zgate^{d_i^\prime}\right)\cnot_{2,1}(\igate\otimes \tgate)\cnot_{1,2}(\tgate\otimes \igate);\; \beta_i\in \mathbb{C}, e_i,d_i,e_i^\prime,d_i^\prime \in\{0,1\}$$
+%\end{enumerate}
+%
+%We observe the following 2 things from the above example:
+%\begin{enumerate}
+%\item[1)] We need 4 complex  numbers and 16 bits to represent the correction matrix.
+%\item[2)] $\cnot$ gates when combine with $\tgate$-gates increases the number of terms in the expression.
+%\end{enumerate}
+%
+%For any 2-qubit quantum circuit  $C_q$ that has $k$ number of $\tgate$-gates, the correction unitary in the worst-case has $2^k$ terms;
+%         $$\sum_{i=1}^{2^k} \left(\beta_i \xgate^{e_i}\zgate^{d_i}\otimes \xgate^{e_i^\prime}\zgate^{d_i^\prime}\right),\; \mbox{ for } \beta_i\in \mathbb{C},\, e_i,d_i,e_i^\prime,d_i^\prime \in\{0,1\}.$$
+%This means we need $2^k$ complex numbers and $2^k\cdot 4$ bits to represent the correction unitary and the update function $f_{C_q}:\mathbb{C}^{2^k}\times \{0,1\}^{2^{k+2}}.$ Therefore, we can obfuscate any 2-qubit quantum circuit $C_q$ using gate-teleportation as far as  the number of $\tgate$  gates are at most $O(\log(|C_q|).$
+%
+%In, general, for any $n$-qubit circuit $C_q,$  the correction unitary can be written as $$\sum_{j=1}^{2^k} \left(\beta_j \xgate^{e_{1j}}\zgate^{d_{1j}}\otimes \xgate^{e_{2j}}\zgate^{d_{2j}}\otimes \cdots  \otimes  \xgate^{e_{2n}}\zgate^{d_{2n}}\right),$$
+%where $\beta_i\in \mathbb{C}$ and  $ e_i,j,d_i,j \in \{0,1\}.$  This means we need $2^k$ complex numbers and $2^k\cdot n$ bits to represent the correction unitary and the update function $f_{C_q}:\{0,1\}^n\longrightarrow \mathbb{C}^{2^k}\times \{0,1\}^{n2^{k}}.$
+%%$$\cnot_{2,1}\cnot_{1,2}(\tgate \otimes \tgate)((\xgate^{b_1} \zgate^{a_1})_1\otimes (\xgate^{b_2} \zgate^{a_2})_2)$$
 %$$\cnot_{2,1}\cnot_{1,2}[(\alpha_1(\xgate^{a_1\oplus b_1} \zgate^{b_1})+\alpha_2(\xgate^{a_1\oplus b_1})]_1 \otimes [\alpha_2(\xgate^{a_2\oplus b_2}\zgate^{b_2})+ (\xgate^{b_2} \zgate^{a_2})]_2(\tgate \otimes \tgate)$$
 %%$$\left(\frac{1+i}{2}\right)^{k_1} \left(\frac{1-i}{2}\right)^{k_2}=\left[\left(\frac{1+i}{2}\right) \left(\frac{1-i}{2}\right)\right]^k \left(\frac{1+i}{2}\right)^{k_1-k} \left(\frac{1-i}{2}\right)^{k_2-k},\; k=min\{k_1, k_2\} $$
 %%$$=\frac{1}{2^k} \left(\frac{1+i}{2}\right)^{k_1-k} \left(\frac{1-i}{2}\right)^{k_2-k}$$
@@ -493,11 +617,10 @@ where $\beta_i\in \mathbb{C}$ and  $ e_i,j,d_i,j \in \{0,1\}.$  This means we ne
 % $$F_{C_q}: \mathbb{F}_2^n \longrightarrow \mathbb{C}^{l_1} \times  \mathbb{F}_2^{l_2}, \mbox{ where } l_1=n\cdot 4^k, \; l_2=2n\cdot 4^k,$$
 %
 % $$\sum_{j=1}^{4^k} \left(\alpha_{1j}\xgate^{b_{1j}}\zgate^{a_{1j}} \otimes \alpha_{2j}\xgate^{b_{2j}}\zgate^{a_{2j}} \otimes \cdots \otimes \alpha_{nj}\xgate^{b_{nj}}\zgate^{a_{nj}}\right)$$
-% where $a_{ij},b_{ij}\in \mathbb{F}_2, \alpha_{ij}\in \mathbb{C}$ and  $\frac{1}{2^k}\leq|\alpha_{ij}| \leq k.$ Therefore, we can efficiently obfuscate any quantum circuit as far as  the number of $\tgate$ gates in it are at most $O(\log(n)).$
+% where $a_{ij},b_{ij}\in \mathbb{F}_2, \alpha_{ij}\in \mathbb{C}$ and  $\frac{1}{2^k}\leq|\alpha_{ij}| \leq k.$ Therefore, we can efficiently obfuscate any quantum circuit as far as  the number of $\tgate$-gates in it are at most $O(\log(n)).$
 %
 %{\color{red}Here we use an idea related to \cite{BFK09,BJ15}. See Figure 8 in \cite{BJ15}. We leave EPR pairs at each T-gate layer, and after the gate teleportation, use iO on a program that will decide whether or not the $\pgate$-gate correction needs to be applied. Have to ask Anne about the relevance of \cite{BFK09} }
 
-\anote{In general, the specific example discussed earlier should come out of the more general case. So, once we have the general case, we can provide (possibly in appendix, depending on what the paper looks like at that point), a worked out example as currently appears in the main text (which is helpful right now, since we're trying to sense a pattern).}
 
 
 %\Anne{TODO: use package cleveref (ie. use \cref instead of \ref)} 
